implement func checkin and display suggest